--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -28,8 +28,8 @@
         <a href="/my_nodes" class="list-group-item list-group-item-action waves-effect">
             <i class="fas fa-book mr-3"></i>My Nodes</a> 
          {{!--view all blocks on all nodes  --}}
-        <a href="/all_nodes" class="list-group-item list-group-item-action waves-effect">
-            <i class="fas fa-book mr-3"></i>All Nodes</a>      
+        {{!-- <a href="/all_nodes" class="list-group-item list-group-item-action waves-effect">
+            <i class="fas fa-book mr-3"></i>All Nodes</a>       --}}
     </div>
     {{else}}
         <div class="list-group list-group-flush">
