feat/implement tooltip for user data on block

--- a/views/pages/default/my_nodes.hbs
+++ b/views/pages/default/my_nodes.hbs
@@ -63,7 +63,9 @@
                 $infoCont.append($item);
             }
             $cont.append($newBlock);
-        });
+        });        
+        //init tooltip
+        $('[data-toggle="tooltip"]').tooltip();
     }
 
     const getMyBlocks = () => {
