--- a/views/partials/blockinfo.hbs
+++ b/views/partials/blockinfo.hbs
@@ -1,7 +1,8 @@
 <div class="col-md-4 block mb-2">
     <div class="card z-depth-1">
         <div class="card-body py-2 px-2">
-            <h5 class="font-weight-bold mb-1 small_font">Block <a href="javascript:void(0);" class="card-link">View Data</a></h5>
+            <h5 class="font-weight-bold mb-1 small_font">Block 
+                <a href="javascript:void(0);" class="card-link data-view" data-toggle="tooltip" data-html="true" data-placement="right" title="<em>Tooltip</em> <u>with</u> <b>HTML</b>">View Data</a></h5>
         </div>
         <ul class="list-group list-group-flush info-content">
             <li class="list-group-item block-item px-2 py-2"><span class="label font-weight-bold text-black small_font"></span>:<span class="value small_font"></span></li>
