--- a/views/pages/default/register.hbs
+++ b/views/pages/default/register.hbs
@@ -453,7 +453,7 @@
         const postObj = { code, detail, mode };
 
         console.log(postObj);
-        fetch('/api/updateOne', {
+        fetch('/api/updateCitizen', {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json',
