--- a/views/pages/default/staff.hbs
+++ b/views/pages/default/staff.hbs
@@ -186,7 +186,7 @@
         const postObj = { code, detail, mode: 'staff' };
 
         console.log(postObj);
-        fetch('/api/updateOne', {
+        fetch('/api/updateStaff', {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json',
