fix/remove forget password

--- a/views/pages/default/index.hbs
+++ b/views/pages/default/index.hbs
@@ -9,7 +9,7 @@
     <!-- passkey -->
     <input type="password" id="passkey" class="form-control mb-4" placeholder="Enter passkey">
 
-    <div class="d-flex justify-content-around">
+    {{!-- <div class="d-flex justify-content-around">
         <div>
             <!-- Remember me -->
             <div class="custom-control custom-checkbox">
@@ -21,7 +21,7 @@
             <!-- Forgot password -->
             <a href="">Forgot password?</a>
         </div>
-    </div>
+    </div> --}}
 
     <!-- Sign in button -->
     <button class="btn btn-info btn-block my-4" type="submit" id="signin">Sign in</button>
