--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 <div class="sidebar-fixed position-fixed">
 
     <a class="logo-wrapper waves-effect">
-    <img src="asset/img/logo.png" class="img-fluid" alt="">
+    <img src="asset/img/nimc2.png" class="img-fluid" alt="">
     </a>
 
     <div class="d-flex justify-content-center">
