--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,7 +25,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand waves-effect" href="/" >
-          <strong class="blue-text">Decentralized citizen</strong>
+          <strong class="blue-text">Nigeria Immigration Service</strong>
         </a>
 
         <!-- Collapse -->
