--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -24,7 +24,7 @@
       <div class="container-fluid">
 
         <!-- Brand -->
-        <a class="navbar-brand waves-effect" href="/" >
+        <a class="navbar-brand waves-effect" href="/register" >
           <strong class="blue-text">{{ user.orgName }}</strong>
         </a>
 
