feat/rename appLogo and appTitle

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,7 +25,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand waves-effect" href="/register" >
-          <strong class="blue-text">{{ user.orgName }}</strong>
+          <strong class="blue-text">{{ user.appTitle }}</strong>
         </a>
 
         <!-- Collapse -->
